Final Commit for iteration 1 -Dylan Rankin